# genterp

./: .gitignore  cindex_plot.txt  clt_plot.txt  loss_plot.txt  pyproject.toml  run.sh
genterp/: __init__.py  __main__.py  _synthetic.py  clt_train.py  crosscoder.py  data.py  decode.py  eval_cindex.py  eval_rollout.py  modeling.py  progress.py  runtime.py  train.py  transcoder.py  vocab.py
scripts/: aou_etl.py  build_ancestors.py
tests/: _factories.py  test_bag_loss.py  test_clt.py  test_clt_train.py  test_collate.py  test_crosscoder.py  test_decode.py  test_etl_sql.py  test_eval_cindex.py  test_packed_attention.py  test_precision.py  test_rope.py  test_runtime.py  test_smoke.py  test_split.py  test_tiny_mode.py  test_train.py  test_value_modulator.py  test_vocab.py
