[project]
name = "genterp"
version = "0.0.1"
description = "Clinical foundation model trained on All of Us OMOP."
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "einops>=0.8",
  "numpy>=1.26",
  "transformers>=4.46",
  "accelerate>=1.0",
  "datasets>=3.0",
  "meds-reader>=0.1.10",
  "meds>=0.3.3",
  "google-cloud-bigquery>=3.25",
  "pytest>=8",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genterp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
