[project]
name = "genterp"
version = "0.0.1"
description = "Clinical foundation model trained on All of Us OMOP."
requires-python = ">=3.11"
dependencies = [
  # AoU Workbench V100 boxes ship with NVIDIA driver CUDA 12.2 (12020). PyPI's
  # default linux torch is built against CUDA 12.4+, which fails to initialize
  # on that driver with "The NVIDIA driver on your system is too old (found
  # version 12020)" and silently falls back to CPU. On Linux x86_64 we pin to
  # 2.4–2.5 and route through the cu121 wheel index (see [tool.uv.sources]
  # below); other platforms get whatever PyPI offers for local dev / CI.
  "torch>=2.4,<2.6 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torch>=2.6 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "einops>=0.8",
  "numpy>=1.26",
  "polars>=1.0",
  "pyarrow>=15",
  "duckdb>=1.1",
  "psutil>=5.9",
  "transformers>=4.46",
  "accelerate>=1.0",
  "datasets>=3.0",
  "google-cloud-bigquery[bqstorage]>=3.25",
  "pytest>=8",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

# Only Linux x86_64 (the AoU Workbench target) goes through the cu121 wheel
# index. On macOS / Windows / arm64 we fall back to whatever PyPI offers
# (CPU torch, or platform-native CUDA), so local dev / CI installs still work.
[tool.uv.sources]
torch = [
  { index = "pytorch-cu121", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

# Resolve independently per-environment so the cu121 pin (which only has
# linux-x86_64 wheels) doesn't poison the macOS-arm64 resolution.
[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genterp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
