[project]
name = "genterp"
version = "0.0.1"
description = "Clinical foundation model trained on All of Us OMOP."
requires-python = ">=3.11,<3.14"
# AoU's workspace ships Python 3.14, but no released PyTorch has cp314 wheels
# yet (2.5.x: cp311-cp313; 2.7.x: cp310-cp313). With this bound uv installs a
# 3.13 interpreter into the project venv automatically — keeps the cu121
# pytorch wheel path viable on AoU's CUDA 12.2 driver.
dependencies = [
  # AoU Workbench V100 boxes ship with NVIDIA driver CUDA 12.2 (12020). PyPI's
  # default linux torch wheels are CUDA 12.4-compiled and refuse to initialize
  # on that driver. We route through the cu118 wheel index (CUDA 11.8 runtime),
  # which is forward-compatible with any driver >= 520 — including V100's 12.2.
  # torch 2.6+ is required because transformers' safety gate now refuses to
  # call torch.load (incl. optimizer/RNG state on resume) on older torches
  # under CVE-2025-32434.
  "torch>=2.6 ; sys_platform == 'linux' and platform_machine == 'x86_64'",
  "torch>=2.6 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
  "einops>=0.8",
  "numpy>=1.26",
  "polars>=1.0",
  "pyarrow>=15",
  "duckdb>=1.1",
  "psutil>=5.9",
  "transformers>=4.46",
  "accelerate>=1.0",
  "datasets>=3.0",
  "google-cloud-bigquery[bqstorage]>=3.25",
  "pytest>=8",
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

# Only Linux x86_64 (the AoU Workbench target) goes through the cu118 wheel
# index. CUDA 11.8 runtime works on any NVIDIA driver >= 520 (CUDA forward
# compatibility), including the workspace's 12.2 driver, while letting us
# install torch 2.6+ — required for transformers' torch.load safety gate.
# On macOS / Windows / arm64 we fall back to whatever PyPI offers
# (CPU torch, or platform-native CUDA), so local dev / CI installs still work.
[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]

# Resolve independently per-environment so the cu121 pin (which only has
# linux-x86_64 wheels) doesn't poison the macOS-arm64 resolution.
[tool.uv]
environments = [
  "sys_platform == 'linux' and platform_machine == 'x86_64'",
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["genterp*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
